--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,8 @@ body:after {
 	top: 0;
 	left: 0;
 	background-image: url(../images/trainschedule_bg.jpg);
+/*	background-size: 100% 100%;
+	background-repeat: no-repeat;*/
 	width: 100%;
 	min-height: 100%;
 	opacity : 0.3;
